force-app/main/default/objects/Case/fields/AutoClosedFlg__c.field-meta.xml
<CustomField>
    <fullName>AutoClosedFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <description>フロー以外からのクローズ、カスタムアクション以外からの再オープンを制御するための項目
・フローからのクローズ時に true
・カスタムアクションからのオープン時に false
・画面からの入力はさせない</description>
    <label>自動クローズフラグ</label>
    <type>Checkbox</type>
</CustomField>