force-app/main/default/objects/Case/fields/device_mng_id__c.field-meta.xml
<CustomField>
    <fullName>device_mng_id__c</fullName>
    <label>機器管理</label>
    <length>36</length>
    <referenceTo>DEVICE_MNG__x</referenceTo>
    <relationshipLabel>ケース</relationshipLabel>
    <relationshipName>case</relationshipName>
    <type>ExternalLookup</type>
</CustomField>