force-app/main/default/objects/Case/fields/response_method__c.field-meta.xml
<CustomField>
    <fullName>response_method__c</fullName>
    <formula>TEXT( Contact.preferred_response_method__c )</formula>
    <label>対応方法</label>
    <type>Text</type>
</CustomField>