force-app/main/default/objects/Case/fields/RMS_AnomalyDetection_Rel__c.field-meta.xml
<CustomField>
    <fullName>RMS_AnomalyDetection_Rel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>異常検知オブジェクトへの参照項目</description>
    <label>異常検知</label>
    <referenceTo>RMS_AnomalyDetection__c</referenceTo>
    <relationshipLabel>ケース</relationshipLabel>
    <relationshipName>RMS_AnomalyDetection_Rels</relationshipName>
    <type>Lookup</type>
</CustomField>