force-app/main/default/objects/Case/fields/Test_NoticeObj_Rel__c.field-meta.xml
<CustomField>
    <fullName>Test_NoticeObj_Rel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Test通知確認用オブジェクトへの参照項目</description>
    <label>Test通知確認用</label>
    <referenceTo>Test_NoticeObj__c</referenceTo>
    <relationshipLabel>ケース</relationshipLabel>
    <relationshipName>Test_NoticeObj_Rels</relationshipName>
    <type>Lookup</type>
</CustomField>